<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="top">

    <Space
        android:layout_width="match_parent"
        android:layout_height="240dp" />

    <!-- Row 1: Longer TextView Label and Shorter Spinner -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/calculateExchangeLabelFromTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convert_from"
            android:layout_marginEnd="16dp" />

        <Spinner
            android:id="@+id/calculateExchangeFromSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- Row 2: Longer TextView Label and Shorter Spinner -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="32dp">

        <TextView
            android:id="@+id/calculateExchangeLabelToTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convert_to"
            android:layout_marginEnd="16dp" />

        <Spinner
            android:id="@+id/calculateExchangeToSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- Add space between spinners and EditText -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />
    <TextView
        android:id="@+id/calculateExchangeDisplayTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginEnd="16dp" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <!-- EditText -->
    <EditText
        android:id="@+id/calculateExchangeAmountEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/enter_amount"
        android:layout_marginBottom="16dp" />

    <!-- Button -->
    <Button
        android:id="@+id/calculateExchangeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate" />
</LinearLayout>
